feat: Update AgentCardSpec to A2A Protocol specification compliance
- Restructure AgentCardSpec to follow A2A Protocol Section 5.5 object structure
- Add AgentProvider, AgentCapabilities, SecurityScheme, AgentSkill, AgentInterface, AgentCardSignature objects
- Update authentication from simple schemes to comprehensive SecurityScheme objects
- Move transport and I/O modes into AgentInterface object
- Add support for multiple transport protocols (JSON-RPC, HTTP, gRPC)
- Add digital signature support with JWKS URL validation
- Update all example config files to be A2A Protocol compliant
- Update test data and validation to match new schema structure
- Update documentation with complete A2A Protocol compliance guide
- Fix all linting issues (line length, whitespace, unused variables)
- Pass security scans with no high/medium vulnerabilities
- All tests passing (18/18)

This ensures full interoperability with A2A Protocol-compliant agents and clients.

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,8 @@ trivy-results.sarif
 # Local development
 local/
 dev/
+bandit-report-examples.json
+bandit-report-full.json
+bandit-report-app.json
+.gitignore
+bandit-report-tests.json
